# telegram_bot_weather

./: README.md  pyproject.toml
.github/workflows/: daily_action.yml  python-app.yml
src/: example_test.py
